# Social_arbitrage

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  phase1.md  pyproject.toml  sample.md
.github/workflows/: ci.yml
config/: base.yaml  logging.yaml  sources.yaml
data/eval/: entity_labels.jsonl  sentiment_labels.jsonl
data/sample/: hackernews.jsonl  rss.jsonl  source_scorecard.csv  yahoo_ohlcv.csv
docs/: architecture.md  entity_resolution.md  legal_register.md  nlp_enrichment.md  sai_methodology.md  source_findings.md  source_scorecard.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_ingestion_backbone.py  0003_entity_resolution.py  0004_nlp_enrichment.py  0005_sai_daily.py
src/sam/: __init__.py  cli.py
src/sam/api/: __init__.py  app.py
src/sam/api/routers/: health.py
src/sam/collectors/: __init__.py  hn_collector.py  kaggle_evaluator.py  reddit_collector.py  rss_collector.py  yahoo_collector.py
src/sam/core/: __init__.py  config.py  db.py  errors.py  logging.py
src/sam/evaluation/: __init__.py  source_metrics.py  source_scorecard.py
src/sam/ingestion/: __init__.py  base.py  hackernews.py  hashing.py  lake.py  rss.py  runner.py  yahoo.py
src/sam/nlp/: __init__.py  evaluate.py  models.py  pipeline.py  topics.py
src/sam/processing/: __init__.py  evaluate.py  pipeline.py  quality.py  resolver.py
src/sam/recon/: __init__.py  collector_base.py  sources.py
src/sam/signals/: __init__.py  compute.py  pipeline.py
src/sam/storage/: __init__.py  models.py  repositories.py
tests/: conftest.py  fakes.py  test_cli.py  test_collectors.py  test_config.py  test_enrichment_pipeline.py  test_evaluate.py  test_hashing.py  test_health.py  test_ingestion_collectors.py  test_ingestion_runner.py  test_integration_pg.py  test_lake.py  test_nlp_evaluate.py  test_nlp_models.py  test_quality.py  test_recon_base.py  test_repositories.py  test_resolution_pipeline.py  test_resolver.py  test_signals_compute.py  test_signals_pipeline.py  test_source_scorecard.py  test_storage.py  test_topics.py
